force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/LLC_BI__Real_Estate_Property_Details__c.object-meta.xml
<CustomObject>
    <description>This extension object captures granular details of Real Estate collateral.</description>
    <label>Real Estate Property Details</label>
    <nameField>
        <label>Real Estate Property Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estate Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>