force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Built_Up_Area__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Built_Up_Area__c</fullName>
    <description>Users or an integration manually populate this text field to include a brief description of the property’s built-up area.</description>
    <inlineHelpText>Enter a brief description of the built-up area.</inlineHelpText>
    <label>Built-Up Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>