force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Ceiling_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ceiling_Type__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s ceiling type of a real estate record.</description>
    <inlineHelpText>Select the property’s ceiling type from the picklist.</inlineHelpText>
    <label>Ceiling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Beam</fullName>
            </value>
            <value>
                <fullName>Shed</fullName>
            </value>
            <value>
                <fullName>Cove</fullName>
            </value>
            <value>
                <fullName>Coffered</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>