force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dwelling_Type__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s dwelling type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s dwelling type from the picklist.</inlineHelpText>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>High Rise Multiple Units</fullName>
            </value>
            <value>
                <fullName>Low Rise Multiple Units</fullName>
            </value>
            <value>
                <fullName>Single Family Detached Four Square</fullName>
            </value>
            <value>
                <fullName>Single Family Detached Ranch</fullName>
            </value>
            <value>
                <fullName>Single Family Detached Row Home</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Semi Detached</fullName>
            </value>
            <value>
                <fullName>Terraced</fullName>
            </value>
            <value>
                <fullName>Purpose Built</fullName>
            </value>
            <value>
                <fullName>Above Shop/Commercial</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>