force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Floor_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Floor_Type__c</fullName>
    <description>Users or an integration manually populate this picklist field to identify a property’s floor type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s floor type from the picklist.</inlineHelpText>
    <label>Floor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ceramic Tile</fullName>
            </value>
            <value>
                <fullName>Porcelain Tile</fullName>
            </value>
            <value>
                <fullName>Floating Wood Tile</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Hardwood</fullName>
            </value>
            <value>
                <fullName>Engineered Wood</fullName>
            </value>
            <value>
                <fullName>Bamboo</fullName>
            </value>
            <value>
                <fullName>Cork</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>