force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Lease_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lease_Period_Months__c</fullName>
    <description>Users or an integration manually populate this number field to identify the lease period for a property if it is a leased asset.</description>
    <inlineHelpText>If this property is a leased asset, enter the lease period for the property in this field.</inlineHelpText>
    <label>Lease Period (Months)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>