force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Number_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_Of_Floors__c</fullName>
    <description>Users or an integration manually populate this number field to indicate the number of floors a property contains for a real estate collateral record.</description>
    <inlineHelpText>Enter the property’s total number of floors in this field.</inlineHelpText>
    <label>Number Of Floors</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>