force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Number_Of_Parking_Spaces_In_Garage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_Of_Parking_Spaces_In_Garage__c</fullName>
    <description>Users or an integration manually populate this number field to indicate the number of parking spaces a property contains for a real estate collateral record.</description>
    <inlineHelpText>Enter the property’s total number of parking spaces in this field.</inlineHelpText>
    <label>Number of Parking Spaces in Garage</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>