force-app/main/default/objects/LLC_BI__Real_Estate_Property_Details__c/fields/LLC_BI__Wall_Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Wall_Construction_Type__c</fullName>
    <description>User or an integration manually populate this picklist field to identify a property’s wall construction type for the real estate collateral record.</description>
    <inlineHelpText>Select the property’s wall construction type from the picklist.</inlineHelpText>
    <label>Wall Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Timber Framed</fullName>
            </value>
            <value>
                <fullName>Steel Framed</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>